--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Echoes of an Unsaid Goodbye</title>
-  <link rel="icon" type="image/png" href="https://i.ibb.co/m5GYjVY8/Gemini-Generated-Image-7rq0ul7rq0ul7rq0-2.png">
-    
+
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
+  <!-- CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<!-- HERO SECTION -->
+<!-- HERO -->
 <section class="hero">
   <div class="hero-content">
     <h1 class="title">Echoes of an Unsaid Goodbye</h1>
@@ -32,15 +32,15 @@
   <div class="chapter-cards">
     <div class="chapter-card">
       <h3>Chapter 1</h3>
-      <p>— The First Meet — Love at First Sight —</p>
+      <p>— The First Meet —</p>
     </div>
     <div class="chapter-card">
       <h3>Chapter 2</h3>
-      <p>— Hidden Love — Feelings Never Spoken —</p>
+      <p>— Hidden Love —</p>
     </div>
     <div class="chapter-card">
       <h3>Chapter 3</h3>
-      <p>— The Unsaid Goodbye — Silence Became Final —</p>
+      <p>— The Unsaid Goodbye —</p>
     </div>
   </div>
 </section>
@@ -48,13 +48,15 @@
 <!-- REVIEW SECTION -->
 <section class="review-section">
   <h2>Leave a Review ✍️</h2>
-  <p>Your words matter. Share how this tale touched you.</p>
+  <p>Your words matter. Share your feelings.</p>
 
   <form
     id="reviewForm"
     action="https://formspree.io/f/xaqjzgel"
     method="POST"
   >
+    <input type="hidden" name="_subject" value="New Book Review">
+
     <label>Your Email</label>
     <input type="email" name="email" required>
 
@@ -71,7 +73,7 @@
   <iframe id="pdfFrame"></iframe>
 </div>
 
-<!-- ROCKET SUCCESS MODAL -->
+<!-- SUCCESS ROCKET MODAL -->
 <div id="rocket-success-modal" class="success-modal-overlay">
   <div class="success-card">
     <div class="rocket">🚀</div>
@@ -79,6 +81,7 @@
   </div>
 </div>
 
+<!-- JS -->
 <script src="script.js"></script>
 </body>
 </html>
